// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TextArea Event tests onFocus 1`] = `
.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
  max-width: 100%;
}

.c1:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c1:focus >circle,
.c1:focus >ellipse,
.c1:focus >line,
.c1:focus >path,
.c1:focus >polygon,
.c1:focus >polyline,
.c1:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c1:focus ::-moz-focus-inner {
  border: 0;
}

.c1::-webkit-input-placeholder {
  color: #676767;
}

.c1::-moz-placeholder {
  color: #676767;
}

.c1:-ms-input-placeholder {
  color: #676767;
}

.c1 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c1::-moz-focus-inner {
  border: none;
  outline: none;
}

.c1:-moz-placeholder,
.c1::-moz-placeholder {
  opacity: 1;
}

.c1::-webkit-input-placeholder {
  font-weight: 400;
}

.c1::-moz-placeholder {
  font-weight: 400;
}

.c1:-ms-input-placeholder {
  font-weight: 400;
}

<div
  class="c0"
>
  <textarea
    class="c1"
    name="item"
    placeholder="item"
  />
</div>
`;

exports[`TextArea Event tests renders size 1`] = `
HTMLCollection [
  .c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  font-size: 0.875rem;
  line-height: 1rem;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
  max-width: 100%;
}

.c1:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c1:focus >circle,
.c1:focus >ellipse,
.c1:focus >line,
.c1:focus >path,
.c1:focus >polygon,
.c1:focus >polyline,
.c1:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c1:focus ::-moz-focus-inner {
  border: 0;
}

.c1::-webkit-input-placeholder {
  color: #676767;
}

.c1::-moz-placeholder {
  color: #676767;
}

.c1:-ms-input-placeholder {
  color: #676767;
}

.c1 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c1::-moz-focus-inner {
  border: none;
  outline: none;
}

.c1:-moz-placeholder,
.c1::-moz-placeholder {
  opacity: 1;
}

.c1::-webkit-input-placeholder {
  font-weight: 400;
}

.c1::-moz-placeholder {
  font-weight: 400;
}

.c1:-ms-input-placeholder {
  font-weight: 400;
}

.c2 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  font-size: 1rem;
  line-height: 1.25rem;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
  max-width: 100%;
}

.c2:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c2:focus >circle,
.c2:focus >ellipse,
.c2:focus >line,
.c2:focus >path,
.c2:focus >polygon,
.c2:focus >polyline,
.c2:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c2:focus ::-moz-focus-inner {
  border: 0;
}

.c2::-webkit-input-placeholder {
  color: #676767;
}

.c2::-moz-placeholder {
  color: #676767;
}

.c2:-ms-input-placeholder {
  color: #676767;
}

.c2 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c2::-moz-focus-inner {
  border: none;
  outline: none;
}

.c2:-moz-placeholder,
.c2::-moz-placeholder {
  opacity: 1;
}

.c2::-webkit-input-placeholder {
  font-weight: 400;
}

.c2::-moz-placeholder {
  font-weight: 400;
}

.c2:-ms-input-placeholder {
  font-weight: 400;
}

.c3 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  font-size: 1.125rem;
  line-height: 1.5rem;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
  max-width: 100%;
}

.c3:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c3:focus >circle,
.c3:focus >ellipse,
.c3:focus >line,
.c3:focus >path,
.c3:focus >polygon,
.c3:focus >polyline,
.c3:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c3:focus ::-moz-focus-inner {
  border: 0;
}

.c3::-webkit-input-placeholder {
  color: #676767;
}

.c3::-moz-placeholder {
  color: #676767;
}

.c3:-ms-input-placeholder {
  color: #676767;
}

.c3 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3:-moz-placeholder,
.c3::-moz-placeholder {
  opacity: 1;
}

.c3::-webkit-input-placeholder {
  font-weight: 400;
}

.c3::-moz-placeholder {
  font-weight: 400;
}

.c3:-ms-input-placeholder {
  font-weight: 400;
}

.c4 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  font-size: 1.375rem;
  line-height: 1.75rem;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
  max-width: 100%;
}

.c4:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c4:focus >circle,
.c4:focus >ellipse,
.c4:focus >line,
.c4:focus >path,
.c4:focus >polygon,
.c4:focus >polyline,
.c4:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c4:focus ::-moz-focus-inner {
  border: 0;
}

.c4::-webkit-input-placeholder {
  color: #676767;
}

.c4::-moz-placeholder {
  color: #676767;
}

.c4:-ms-input-placeholder {
  color: #676767;
}

.c4 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c4::-moz-focus-inner {
  border: none;
  outline: none;
}

.c4:-moz-placeholder,
.c4::-moz-placeholder {
  opacity: 1;
}

.c4::-webkit-input-placeholder {
  font-weight: 400;
}

.c4::-moz-placeholder {
  font-weight: 400;
}

.c4:-ms-input-placeholder {
  font-weight: 400;
}

.c5 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  font-size: 1.5rem;
  line-height: 1.875rem;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
  max-width: 100%;
}

.c5:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c5:focus >circle,
.c5:focus >ellipse,
.c5:focus >line,
.c5:focus >path,
.c5:focus >polygon,
.c5:focus >polyline,
.c5:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c5:focus ::-moz-focus-inner {
  border: 0;
}

.c5::-webkit-input-placeholder {
  color: #676767;
}

.c5::-moz-placeholder {
  color: #676767;
}

.c5:-ms-input-placeholder {
  color: #676767;
}

.c5 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c5::-moz-focus-inner {
  border: none;
  outline: none;
}

.c5:-moz-placeholder,
.c5::-moz-placeholder {
  opacity: 1;
}

.c5::-webkit-input-placeholder {
  font-weight: 400;
}

.c5::-moz-placeholder {
  font-weight: 400;
}

.c5:-ms-input-placeholder {
  font-weight: 400;
}

.c6 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  font-size: 2.25rem;
  line-height: 2.5rem;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
  max-width: 100%;
}

.c6:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c6:focus >circle,
.c6:focus >ellipse,
.c6:focus >line,
.c6:focus >path,
.c6:focus >polygon,
.c6:focus >polyline,
.c6:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c6:focus ::-moz-focus-inner {
  border: 0;
}

.c6::-webkit-input-placeholder {
  color: #676767;
}

.c6::-moz-placeholder {
  color: #676767;
}

.c6:-ms-input-placeholder {
  color: #676767;
}

.c6 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c6::-moz-focus-inner {
  border: none;
  outline: none;
}

.c6:-moz-placeholder,
.c6::-moz-placeholder {
  opacity: 1;
}

.c6::-webkit-input-placeholder {
  font-weight: 400;
}

.c6::-moz-placeholder {
  font-weight: 400;
}

.c6:-ms-input-placeholder {
  font-weight: 400;
}

.c7 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  font-size: 34px;
  line-height: 40px;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
  max-width: 100%;
}

.c7:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c7:focus >circle,
.c7:focus >ellipse,
.c7:focus >line,
.c7:focus >path,
.c7:focus >polygon,
.c7:focus >polyline,
.c7:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c7:focus ::-moz-focus-inner {
  border: 0;
}

.c7::-webkit-input-placeholder {
  color: #676767;
}

.c7::-moz-placeholder {
  color: #676767;
}

.c7:-ms-input-placeholder {
  color: #676767;
}

.c7 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c7::-moz-focus-inner {
  border: none;
  outline: none;
}

.c7:-moz-placeholder,
.c7::-moz-placeholder {
  opacity: 1;
}

.c7::-webkit-input-placeholder {
  font-weight: 400;
}

.c7::-moz-placeholder {
  font-weight: 400;
}

.c7:-ms-input-placeholder {
  font-weight: 400;
}

.c8 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  font-size: 2.625rem;
  line-height: 2.875rem;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
  max-width: 100%;
}

.c8:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c8:focus >circle,
.c8:focus >ellipse,
.c8:focus >line,
.c8:focus >path,
.c8:focus >polygon,
.c8:focus >polyline,
.c8:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c8:focus ::-moz-focus-inner {
  border: 0;
}

.c8::-webkit-input-placeholder {
  color: #676767;
}

.c8::-moz-placeholder {
  color: #676767;
}

.c8:-ms-input-placeholder {
  color: #676767;
}

.c8 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c8::-moz-focus-inner {
  border: none;
  outline: none;
}

.c8:-moz-placeholder,
.c8::-moz-placeholder {
  opacity: 1;
}

.c8::-webkit-input-placeholder {
  font-weight: 400;
}

.c8::-moz-placeholder {
  font-weight: 400;
}

.c8:-ms-input-placeholder {
  font-weight: 400;
}

.c9 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  font-size: 3rem;
  line-height: 3rem;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
  max-width: 100%;
}

.c9:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c9:focus >circle,
.c9:focus >ellipse,
.c9:focus >line,
.c9:focus >path,
.c9:focus >polygon,
.c9:focus >polyline,
.c9:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c9:focus ::-moz-focus-inner {
  border: 0;
}

.c9::-webkit-input-placeholder {
  color: #676767;
}

.c9::-moz-placeholder {
  color: #676767;
}

.c9:-ms-input-placeholder {
  color: #676767;
}

.c9 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c9::-moz-focus-inner {
  border: none;
  outline: none;
}

.c9:-moz-placeholder,
.c9::-moz-placeholder {
  opacity: 1;
}

.c9::-webkit-input-placeholder {
  font-weight: 400;
}

.c9::-moz-placeholder {
  font-weight: 400;
}

.c9:-ms-input-placeholder {
  font-weight: 400;
}

.c10 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  font-size: 4.5rem;
  line-height: 4.5rem;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
  max-width: 100%;
}

.c10:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c10:focus >circle,
.c10:focus >ellipse,
.c10:focus >line,
.c10:focus >path,
.c10:focus >polygon,
.c10:focus >polyline,
.c10:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c10:focus ::-moz-focus-inner {
  border: 0;
}

.c10::-webkit-input-placeholder {
  color: #676767;
}

.c10::-moz-placeholder {
  color: #676767;
}

.c10:-ms-input-placeholder {
  color: #676767;
}

.c10 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c10::-moz-focus-inner {
  border: none;
  outline: none;
}

.c10:-moz-placeholder,
.c10::-moz-placeholder {
  opacity: 1;
}

.c10::-webkit-input-placeholder {
  font-weight: 400;
}

.c10::-moz-placeholder {
  font-weight: 400;
}

.c10:-ms-input-placeholder {
  font-weight: 400;
}

.c11 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  font-size: 16px;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
  max-width: 100%;
}

.c11:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c11:focus >circle,
.c11:focus >ellipse,
.c11:focus >line,
.c11:focus >path,
.c11:focus >polygon,
.c11:focus >polyline,
.c11:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c11:focus ::-moz-focus-inner {
  border: 0;
}

.c11::-webkit-input-placeholder {
  color: #676767;
}

.c11::-moz-placeholder {
  color: #676767;
}

.c11:-ms-input-placeholder {
  color: #676767;
}

.c11 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c11::-moz-focus-inner {
  border: none;
  outline: none;
}

.c11:-moz-placeholder,
.c11::-moz-placeholder {
  opacity: 1;
}

.c11::-webkit-input-placeholder {
  font-weight: 400;
}

.c11::-moz-placeholder {
  font-weight: 400;
}

.c11:-ms-input-placeholder {
  font-weight: 400;
}

.c12 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  font-size: 1rem;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
  max-width: 100%;
}

.c12:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c12:focus >circle,
.c12:focus >ellipse,
.c12:focus >line,
.c12:focus >path,
.c12:focus >polygon,
.c12:focus >polyline,
.c12:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c12:focus ::-moz-focus-inner {
  border: 0;
}

.c12::-webkit-input-placeholder {
  color: #676767;
}

.c12::-moz-placeholder {
  color: #676767;
}

.c12:-ms-input-placeholder {
  color: #676767;
}

.c12 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c12::-moz-focus-inner {
  border: none;
  outline: none;
}

.c12:-moz-placeholder,
.c12::-moz-placeholder {
  opacity: 1;
}

.c12::-webkit-input-placeholder {
  font-weight: 400;
}

.c12::-moz-placeholder {
  font-weight: 400;
}

.c12:-ms-input-placeholder {
  font-weight: 400;
}

.c13 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  font-size: 100%;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
  max-width: 100%;
}

.c13:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c13:focus >circle,
.c13:focus >ellipse,
.c13:focus >line,
.c13:focus >path,
.c13:focus >polygon,
.c13:focus >polyline,
.c13:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c13:focus ::-moz-focus-inner {
  border: 0;
}

.c13::-webkit-input-placeholder {
  color: #676767;
}

.c13::-moz-placeholder {
  color: #676767;
}

.c13:-ms-input-placeholder {
  color: #676767;
}

.c13 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c13::-moz-focus-inner {
  border: none;
  outline: none;
}

.c13:-moz-placeholder,
.c13::-moz-placeholder {
  opacity: 1;
}

.c13::-webkit-input-placeholder {
  font-weight: 400;
}

.c13::-moz-placeholder {
  font-weight: 400;
}

.c13:-ms-input-placeholder {
  font-weight: 400;
}

<div
    class="c0"
  >
    <textarea
      class="c1"
    />
    <textarea
      class="c2"
    />
    <textarea
      class="c3"
    />
    <textarea
      class="c4"
    />
    <textarea
      class="c5"
    />
    <textarea
      class="c6"
    />
    <textarea
      class="c7"
    />
    <textarea
      class="c8"
    />
    <textarea
      class="c9"
    />
    <textarea
      class="c10"
    />
    <textarea
      class="c10"
    />
    <textarea
      class="c11"
    />
    <textarea
      class="c12"
    />
    <textarea
      class="c13"
    />
  </div>,
]
`;

exports[`TextArea basic 1`] = `
.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
  max-width: 100%;
}

.c1:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c1:focus >circle,
.c1:focus >ellipse,
.c1:focus >line,
.c1:focus >path,
.c1:focus >polygon,
.c1:focus >polyline,
.c1:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c1:focus ::-moz-focus-inner {
  border: 0;
}

.c1::-webkit-input-placeholder {
  color: #676767;
}

.c1::-moz-placeholder {
  color: #676767;
}

.c1:-ms-input-placeholder {
  color: #676767;
}

.c1 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c1::-moz-focus-inner {
  border: none;
  outline: none;
}

.c1:-moz-placeholder,
.c1::-moz-placeholder {
  opacity: 1;
}

.c1::-webkit-input-placeholder {
  font-weight: 400;
}

.c1::-moz-placeholder {
  font-weight: 400;
}

.c1:-ms-input-placeholder {
  font-weight: 400;
}

<div
  class="c0"
>
  <textarea
    class="c1"
    id="item"
    name="item"
  />
</div>
`;

exports[`TextArea basic outside grommet wrapper 1`] = `
.c0 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  max-width: 100%;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c0:focus >circle,
.c0:focus >ellipse,
.c0:focus >line,
.c0:focus >path,
.c0:focus >polygon,
.c0:focus >polyline,
.c0:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c0:focus ::-moz-focus-inner {
  border: 0;
}

.c0::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c0::-moz-placeholder {
  color: #AAAAAA;
}

.c0:-ms-input-placeholder {
  color: #AAAAAA;
}

.c0 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c0::-moz-focus-inner {
  border: none;
  outline: none;
}

.c0:-moz-placeholder,
.c0::-moz-placeholder {
  opacity: 1;
}

<textarea
  class="c0"
  id="item"
  name="item"
/>
`;

exports[`TextArea custom theme input font size 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  font-size: 16px;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  max-width: 100%;
}

.c1:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c1:focus >circle,
.c1:focus >ellipse,
.c1:focus >line,
.c1:focus >path,
.c1:focus >polygon,
.c1:focus >polyline,
.c1:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c1:focus ::-moz-focus-inner {
  border: 0;
}

.c1::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c1::-moz-placeholder {
  color: #AAAAAA;
}

.c1:-ms-input-placeholder {
  color: #AAAAAA;
}

.c1 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c1::-moz-focus-inner {
  border: none;
  outline: none;
}

.c1:-moz-placeholder,
.c1::-moz-placeholder {
  opacity: 1;
}

<div
  class="c0"
>
  <textarea
    class="c1"
  />
</div>
`;

exports[`TextArea disabled 1`] = `
.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
  outline: none;
  border: none;
  width: 100%;
  -webkit-appearance: none;
  opacity: 0.3;
  cursor: default;
  max-width: 100%;
}

.c1:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c1:focus >circle,
.c1:focus >ellipse,
.c1:focus >line,
.c1:focus >path,
.c1:focus >polygon,
.c1:focus >polyline,
.c1:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c1:focus ::-moz-focus-inner {
  border: 0;
}

.c1::-webkit-input-placeholder {
  color: #676767;
}

.c1::-moz-placeholder {
  color: #676767;
}

.c1:-ms-input-placeholder {
  color: #676767;
}

.c1 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c1::-moz-focus-inner {
  border: none;
  outline: none;
}

.c1:-moz-placeholder,
.c1::-moz-placeholder {
  opacity: 1;
}

.c1::-webkit-input-placeholder {
  font-weight: 400;
}

.c1::-moz-placeholder {
  font-weight: 400;
}

.c1:-ms-input-placeholder {
  font-weight: 400;
}

<div
  class="c0"
>
  <textarea
    class="c1"
    disabled=""
    id="item"
    name="item"
  />
</div>
`;

exports[`TextArea fill 1`] = `
.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
  height: 100%;
  max-width: 100%;
}

.c1:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c1:focus >circle,
.c1:focus >ellipse,
.c1:focus >line,
.c1:focus >path,
.c1:focus >polygon,
.c1:focus >polyline,
.c1:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c1:focus ::-moz-focus-inner {
  border: 0;
}

.c1::-webkit-input-placeholder {
  color: #676767;
}

.c1::-moz-placeholder {
  color: #676767;
}

.c1:-ms-input-placeholder {
  color: #676767;
}

.c1 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c1::-moz-focus-inner {
  border: none;
  outline: none;
}

.c1:-moz-placeholder,
.c1::-moz-placeholder {
  opacity: 1;
}

.c1::-webkit-input-placeholder {
  font-weight: 400;
}

.c1::-moz-placeholder {
  font-weight: 400;
}

.c1:-ms-input-placeholder {
  font-weight: 400;
}

<div
  class="c0"
>
  <textarea
    class="c1"
    id="item"
    name="item"
  />
</div>
`;

exports[`TextArea focusIndicator 1`] = `
.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
  max-width: 100%;
}

.c1:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c1:focus >circle,
.c1:focus >ellipse,
.c1:focus >line,
.c1:focus >path,
.c1:focus >polygon,
.c1:focus >polyline,
.c1:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c1:focus ::-moz-focus-inner {
  border: 0;
}

.c1::-webkit-input-placeholder {
  color: #676767;
}

.c1::-moz-placeholder {
  color: #676767;
}

.c1:-ms-input-placeholder {
  color: #676767;
}

.c1 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c1::-moz-focus-inner {
  border: none;
  outline: none;
}

.c1:-moz-placeholder,
.c1::-moz-placeholder {
  opacity: 1;
}

.c1::-webkit-input-placeholder {
  font-weight: 400;
}

.c1::-moz-placeholder {
  font-weight: 400;
}

.c1:-ms-input-placeholder {
  font-weight: 400;
}

<div
  class="c0"
>
  <textarea
    class="c1"
    id="item"
    name="item"
  />
</div>
`;

exports[`TextArea placeholder 1`] = `
.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
  max-width: 100%;
}

.c1:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c1:focus >circle,
.c1:focus >ellipse,
.c1:focus >line,
.c1:focus >path,
.c1:focus >polygon,
.c1:focus >polyline,
.c1:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c1:focus ::-moz-focus-inner {
  border: 0;
}

.c1::-webkit-input-placeholder {
  color: #676767;
}

.c1::-moz-placeholder {
  color: #676767;
}

.c1:-ms-input-placeholder {
  color: #676767;
}

.c1 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c1::-moz-focus-inner {
  border: none;
  outline: none;
}

.c1:-moz-placeholder,
.c1::-moz-placeholder {
  opacity: 1;
}

.c1::-webkit-input-placeholder {
  font-weight: 400;
}

.c1::-moz-placeholder {
  font-weight: 400;
}

.c1:-ms-input-placeholder {
  font-weight: 400;
}

<div
  class="c0"
>
  <textarea
    class="c1"
    id="item"
    name="item"
    placeholder="placeholder"
  />
</div>
`;

exports[`TextArea plain 1`] = `
.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
  outline: none;
  border: none;
  width: 100%;
  -webkit-appearance: none;
  max-width: 100%;
}

.c1:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c1:focus >circle,
.c1:focus >ellipse,
.c1:focus >line,
.c1:focus >path,
.c1:focus >polygon,
.c1:focus >polyline,
.c1:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c1:focus ::-moz-focus-inner {
  border: 0;
}

.c1::-webkit-input-placeholder {
  color: #676767;
}

.c1::-moz-placeholder {
  color: #676767;
}

.c1:-ms-input-placeholder {
  color: #676767;
}

.c1 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c1::-moz-focus-inner {
  border: none;
  outline: none;
}

.c1:-moz-placeholder,
.c1::-moz-placeholder {
  opacity: 1;
}

.c1::-webkit-input-placeholder {
  font-weight: 400;
}

.c1::-moz-placeholder {
  font-weight: 400;
}

.c1:-ms-input-placeholder {
  font-weight: 400;
}

<div
  class="c0"
>
  <textarea
    class="c1"
    id="item"
    name="item"
  />
</div>
`;

exports[`TextArea resize false 1`] = `
.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
  resize: none;
  max-width: 100%;
}

.c1:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c1:focus >circle,
.c1:focus >ellipse,
.c1:focus >line,
.c1:focus >path,
.c1:focus >polygon,
.c1:focus >polyline,
.c1:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c1:focus ::-moz-focus-inner {
  border: 0;
}

.c1::-webkit-input-placeholder {
  color: #676767;
}

.c1::-moz-placeholder {
  color: #676767;
}

.c1:-ms-input-placeholder {
  color: #676767;
}

.c1 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c1::-moz-focus-inner {
  border: none;
  outline: none;
}

.c1:-moz-placeholder,
.c1::-moz-placeholder {
  opacity: 1;
}

.c1::-webkit-input-placeholder {
  font-weight: 400;
}

.c1::-moz-placeholder {
  font-weight: 400;
}

.c1:-ms-input-placeholder {
  font-weight: 400;
}

<div
  class="c0"
>
  <textarea
    class="c1"
    id="item"
    name="item"
  />
</div>
`;

exports[`TextArea resize horizontal 1`] = `
.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
  resize: horizontal;
  max-width: 100%;
}

.c1:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c1:focus >circle,
.c1:focus >ellipse,
.c1:focus >line,
.c1:focus >path,
.c1:focus >polygon,
.c1:focus >polyline,
.c1:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c1:focus ::-moz-focus-inner {
  border: 0;
}

.c1::-webkit-input-placeholder {
  color: #676767;
}

.c1::-moz-placeholder {
  color: #676767;
}

.c1:-ms-input-placeholder {
  color: #676767;
}

.c1 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c1::-moz-focus-inner {
  border: none;
  outline: none;
}

.c1:-moz-placeholder,
.c1::-moz-placeholder {
  opacity: 1;
}

.c1::-webkit-input-placeholder {
  font-weight: 400;
}

.c1::-moz-placeholder {
  font-weight: 400;
}

.c1:-ms-input-placeholder {
  font-weight: 400;
}

<div
  class="c0"
>
  <textarea
    class="c1"
    id="item"
    name="item"
  />
</div>
`;

exports[`TextArea resize true 1`] = `
.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
  resize: both;
  max-width: 100%;
}

.c1:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c1:focus >circle,
.c1:focus >ellipse,
.c1:focus >line,
.c1:focus >path,
.c1:focus >polygon,
.c1:focus >polyline,
.c1:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c1:focus ::-moz-focus-inner {
  border: 0;
}

.c1::-webkit-input-placeholder {
  color: #676767;
}

.c1::-moz-placeholder {
  color: #676767;
}

.c1:-ms-input-placeholder {
  color: #676767;
}

.c1 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c1::-moz-focus-inner {
  border: none;
  outline: none;
}

.c1:-moz-placeholder,
.c1::-moz-placeholder {
  opacity: 1;
}

.c1::-webkit-input-placeholder {
  font-weight: 400;
}

.c1::-moz-placeholder {
  font-weight: 400;
}

.c1:-ms-input-placeholder {
  font-weight: 400;
}

<div
  class="c0"
>
  <textarea
    class="c1"
    id="item"
    name="item"
  />
</div>
`;

exports[`TextArea resize vertical 1`] = `
.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
  resize: vertical;
  max-width: 100%;
}

.c1:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c1:focus >circle,
.c1:focus >ellipse,
.c1:focus >line,
.c1:focus >path,
.c1:focus >polygon,
.c1:focus >polyline,
.c1:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c1:focus ::-moz-focus-inner {
  border: 0;
}

.c1::-webkit-input-placeholder {
  color: #676767;
}

.c1::-moz-placeholder {
  color: #676767;
}

.c1:-ms-input-placeholder {
  color: #676767;
}

.c1 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c1::-moz-focus-inner {
  border: none;
  outline: none;
}

.c1:-moz-placeholder,
.c1::-moz-placeholder {
  opacity: 1;
}

.c1::-webkit-input-placeholder {
  font-weight: 400;
}

.c1::-moz-placeholder {
  font-weight: 400;
}

.c1:-ms-input-placeholder {
  font-weight: 400;
}

<div
  class="c0"
>
  <textarea
    class="c1"
    id="item"
    name="item"
  />
</div>
`;

exports[`TextArea should apply a11yTitle or aria-label 1`] = `
.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
  max-width: 100%;
}

.c1:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c1:focus >circle,
.c1:focus >ellipse,
.c1:focus >line,
.c1:focus >path,
.c1:focus >polygon,
.c1:focus >polyline,
.c1:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c1:focus ::-moz-focus-inner {
  border: 0;
}

.c1::-webkit-input-placeholder {
  color: #676767;
}

.c1::-moz-placeholder {
  color: #676767;
}

.c1:-ms-input-placeholder {
  color: #676767;
}

.c1 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c1::-moz-focus-inner {
  border: none;
  outline: none;
}

.c1:-moz-placeholder,
.c1::-moz-placeholder {
  opacity: 1;
}

.c1::-webkit-input-placeholder {
  font-weight: 400;
}

.c1::-moz-placeholder {
  font-weight: 400;
}

.c1:-ms-input-placeholder {
  font-weight: 400;
}

<div
  class="c0"
>
  <textarea
    aria-label="item"
    class="c1"
    id="item"
    name="item"
  />
  <textarea
    aria-label="item-2"
    class="c1"
    id="item-2"
    name="item-2"
  />
</div>
`;

exports[`TextArea size large 1`] = `
.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  font-size: 1.375rem;
  line-height: 1.75rem;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
  max-width: 100%;
}

.c1:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c1:focus >circle,
.c1:focus >ellipse,
.c1:focus >line,
.c1:focus >path,
.c1:focus >polygon,
.c1:focus >polyline,
.c1:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c1:focus ::-moz-focus-inner {
  border: 0;
}

.c1::-webkit-input-placeholder {
  color: #676767;
}

.c1::-moz-placeholder {
  color: #676767;
}

.c1:-ms-input-placeholder {
  color: #676767;
}

.c1 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c1::-moz-focus-inner {
  border: none;
  outline: none;
}

.c1:-moz-placeholder,
.c1::-moz-placeholder {
  opacity: 1;
}

.c1::-webkit-input-placeholder {
  font-weight: 400;
}

.c1::-moz-placeholder {
  font-weight: 400;
}

.c1:-ms-input-placeholder {
  font-weight: 400;
}

<div
  class="c0"
>
  <textarea
    class="c1"
    id="item"
    name="item"
  />
</div>
`;

exports[`TextArea size medium 1`] = `
.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  font-size: 1.125rem;
  line-height: 1.5rem;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
  max-width: 100%;
}

.c1:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c1:focus >circle,
.c1:focus >ellipse,
.c1:focus >line,
.c1:focus >path,
.c1:focus >polygon,
.c1:focus >polyline,
.c1:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c1:focus ::-moz-focus-inner {
  border: 0;
}

.c1::-webkit-input-placeholder {
  color: #676767;
}

.c1::-moz-placeholder {
  color: #676767;
}

.c1:-ms-input-placeholder {
  color: #676767;
}

.c1 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c1::-moz-focus-inner {
  border: none;
  outline: none;
}

.c1:-moz-placeholder,
.c1::-moz-placeholder {
  opacity: 1;
}

.c1::-webkit-input-placeholder {
  font-weight: 400;
}

.c1::-moz-placeholder {
  font-weight: 400;
}

.c1:-ms-input-placeholder {
  font-weight: 400;
}

<div
  class="c0"
>
  <textarea
    class="c1"
    id="item"
    name="item"
  />
</div>
`;

exports[`TextArea size small 1`] = `
.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  font-size: 1rem;
  line-height: 1.25rem;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
  max-width: 100%;
}

.c1:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c1:focus >circle,
.c1:focus >ellipse,
.c1:focus >line,
.c1:focus >path,
.c1:focus >polygon,
.c1:focus >polyline,
.c1:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c1:focus ::-moz-focus-inner {
  border: 0;
}

.c1::-webkit-input-placeholder {
  color: #676767;
}

.c1::-moz-placeholder {
  color: #676767;
}

.c1:-ms-input-placeholder {
  color: #676767;
}

.c1 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c1::-moz-focus-inner {
  border: none;
  outline: none;
}

.c1:-moz-placeholder,
.c1::-moz-placeholder {
  opacity: 1;
}

.c1::-webkit-input-placeholder {
  font-weight: 400;
}

.c1::-moz-placeholder {
  font-weight: 400;
}

.c1:-ms-input-placeholder {
  font-weight: 400;
}

<div
  class="c0"
>
  <textarea
    class="c1"
    id="item"
    name="item"
  />
</div>
`;
